update image file path

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="hero-image">
                 <div class="profile-placeholder">
                     <!-- <i class="fas fa-user"> -->
-                        <img src="images/kulvir.jpg" alt="Kulvir Singh" style="width: 300px; height: 300px; object-fit: cover; border-radius: 50%; display: block; margin: 0 auto;">
+                        <img src="https://github.com/kulvir06/my-portfolio/blob/main/images/kulvir.JPG" alt="Kulvir Singh" style="width: 300px; height: 300px; object-fit: cover; border-radius: 50%; display: block; margin: 0 auto;">
                     <!-- </i> -->
                 </div>
             </div>
